--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,7 @@
     "source": "functions"
   },
   "hosting": {
-    "public": "public",
+    "public": "public/slunch-web/dist/slunch-web",
     "ignore": [
       "firebase.json",
       "**/.*",
