--- a/public/slunch-web/package.json
+++ b/public/slunch-web/package.json
@@ -25,6 +25,7 @@
     "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.5.4",
     "firebase": "^5.3.0",
+    "grpc": "^1.13.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
