--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ branches:
     - master
 
 before_script:
+  - cd public/slunch-web
   - npm install -g firebase-tools
   - npm install -g @angular/cli
 
@@ -14,4 +15,5 @@ script:
   - ng build --prod --aot
 
 after_success:
-   - firebase deploy --token $FIREBASE_TOKEN
+  - cd ../.. 
+  - firebase deploy --token $FIREBASE_TOKEN
