--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ branches:
 
 before_script:
   - cd public/slunch-web
+  - npm install
   - npm install -g firebase-tools
   - npm install -g @angular/cli
 
@@ -15,5 +16,5 @@ script:
   - ng build --prod --aot
 
 after_success:
-  - cd ../.. 
+  - cd ../..
   - firebase deploy --token $FIREBASE_TOKEN
