--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ branches:
 
 before_script:
   - cd public/slunch-web
-  - npm install
+  - npm install --production
   - npm install -g firebase-tools
   - npm install -g @angular/cli
 
@@ -17,4 +17,5 @@ script:
 
 after_success:
   - cd ../..
+  - firebase use prod
   - firebase deploy --token $FIREBASE_TOKEN
