--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ branches:
 
 before_script:
   - cd public/slunch-web
-  - npm install --production
+  - npm install
   - npm install -g firebase-tools
   - npm install -g @angular/cli
 
