--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ branches:
     - master
 
 before_script:
-  - cd public/slunch-web
+  - cd functions
+  - npm install
+  - cd ../public/slunch-web
   - npm install
   - npm install -g firebase-tools
   - npm install -g @angular/cli
