--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~5.12.1",
+    "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.0.5"
   },
   "devDependencies": {
