--- a/public/slunch-web/package.json
+++ b/public/slunch-web/package.json
@@ -30,7 +30,9 @@
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "ag-grid": "^18.1.0",
+    "ag-grid-angular": "^18.1.0"
   },
   "devDependencies": {
     "@angular/cli": "~6.1.4",
