--- a/.travis.yml
+++ b/.travis.yml
@@ -15,23 +15,18 @@ before_script:
   - npm install -g firebase-tools
   - npm install -g @angular/cli
 
-deploy:
-  script:
-    - ng build --prod --aot
-  after_success:
-    - cd ../..
-    - firebase use prod
-    - firebase deploy --token $FIREBASE_TOKEN
-  on:
-    branch: master
-
-deploy:
-  script:
-    - ng build --aot
-  after_success:
-    - cd ../..
-    - firebase use dev
-    - firebase deploy --token $FIREBASE_TOKEN_DEV
-  on:
-    branch: dev
-  
+script:
+  - |
+    if [ $TRAVIS_BRANCH == "master"]; then
+      ng build --prod --aot
+    if [ $TRAVIS_BRANCH == "dev"]; then
+      ng build --aot
+after_success:
+  - |
+    cd ../..
+    if [ $TRAVIS_BRANCH == "master"]; then
+      firebase use prod
+      firebase deploy --token $FIREBASE_TOKEN
+    if [ $TRAVIS_BRANCH == "dev"]; then
+      firebase use dev
+      firebase deploy --token $FIREBASE_TOKEN_DEV
