added toast for negative balance

--- a/public/slunch-web/package.json
+++ b/public/slunch-web/package.json
@@ -12,27 +12,29 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.9",
-    "@angular/flex-layout": "^6.0.0-beta.17",
     "@angular/cdk": "^6.4.0",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
+    "@angular/flex-layout": "^6.0.0-beta.18",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
     "@angular/material": "^6.4.0",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "ag-grid": "^18.1.2",
+    "ag-grid-angular": "^18.1.0",
     "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.5.4",
     "firebase": "^5.3.0",
     "grpc": "^1.13.1",
     "hammerjs": "^2.0.8",
+    "ngx-toastr": "^9.1.1",
+    "reinstall": "^2.0.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
-    "zone.js": "^0.8.26",
-    "ag-grid": "^18.1.2",
-    "ag-grid-angular": "^18.1.0"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "~6.1.4",
